--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         </header>
         <main class="conteudo-principal">
             <div class="container-form"> <!-- container que contém descrições e os campos do formulário-->
-                <h2 class="mb">GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA DE MARKETING DA ATUALIDADE</h2>
-                <p class="mb">Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem
+                <h2 class="mb">GARANTA O SEU LUGAR NO WORKSHOP DA MAIOR ESPECIALISTA EM DIRIETO CONSTITUCIONAL</h2>
+                <p class="mb">Neste evento, você vai aprender todos os segredos que vão te fazer ser um advogado de sucesso sem
                     precisar contar com a sorte. </p>
                 <form id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" 
                 novalidate 
@@ -36,11 +36,11 @@
             </div>
         </main>
         <footer> <!-- rodapé da página -->
-            <img class="picture" src="./assets/face.jpg" alt="imagem dp palestrante">
+            <img class="picture" src="./assets/imagemprincipal.jpg" alt="imagem dp palestrante">
             <div class="description">
-                <h3>O palestrante</h3>
-                <p>Carlos fontana é conhecido por dar palestras que abalam as estruturas do marketing tradicional. Prepara-se para sair do evento com uma nova visão do que é possivel ser feito para o seu negócio decolar.</p>
-                <p>Formado em marketig pela Universidade XYZ e fundador da MarkUp, a empresa vencedora dos últimos 5 prêmios MarketingBr</p>
+                <h3>A palestrante</h3>
+                <p>Brenda Silva é conhecida por dar palestras que abalam as estruturas do direito constitucional. Prepare-se para sair do evento com uma nova visão do que é possivel ser feito para o seu escritório decolar.</p>
+                <p>Formada em Direito pela Universidade XYZ e fundadora da MarkUp, a empresa vencedora dos últimos 5 prêmios do meio jurídico.</p>
             </div>
         </footer>
 </body>
